--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Creating a blog for users to talk about what ever they want",
   "main": "index.js",
   "scripts": {
+    "start":"nodemon ./server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
